--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,14 +36,14 @@ android {
 
 dependencies {
 
-    implementation 'com.android.support:appcompat-v7:28.0.0'
+    implementation 'com.androidx.support:appcompat-v7:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:2.0.4'
     implementation'androidx.lifecycle:lifecycle-extensions:2.0.0'
     implementation'androidx.recyclerview:recyclerview:1.0.0'
     implementation "androidx.fragment:fragment-ktx:1.3.2"
-    implementation "com.android.support:support-v4:23.1.1"
-    implementation "com.android.support:support-v4:23.1.1"
-    implementation "com.android.support:appcompat-v7:23.1.1"
+    implementation "com.androidx.support:support-v4:23.1.1"
+    implementation "com.androidx.support:support-v4:23.1.1"
+    implementation "com.androidx.support:appcompat-v7:23.1.1"
     implementation "com.android.support:support-annotations:23.1.1"
     implementation 'androidx.core:corektx:1.1.0-alpha04'
     implementation 'androidx.room:roomruntime:2.1.0-alpha04'
